--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         dataUrl: buildUrl + "/Version 1.0.data.unityweb",
         frameworkUrl: buildUrl + "/Version 1.0.framework.js.unityweb",
         codeUrl: buildUrl + "/Version 1.0.wasm.unityweb",
+        symbolsUrl: buildUrl + "/Version 1.0.symbols.json.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Pet Project",
