--- a/Version 1.0/index.html
+++ b/Version 1.0/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Version 1.0.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Version 1.0.data.br",
-        frameworkUrl: buildUrl + "/Version 1.0.framework.js.br",
-        codeUrl: buildUrl + "/Version 1.0.wasm.br",
+        dataUrl: buildUrl + "/Version 1.0.data.unityweb",
+        frameworkUrl: buildUrl + "/Version 1.0.framework.js.unityweb",
+        codeUrl: buildUrl + "/Version 1.0.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Pet Project",
